--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-chromedriver_py==121.0.6167.85
+chromedriver-py==121.0.6167.85
 openai==1.12.0
+python-docx==1.1.0
 python-dotenv==1.0.1
-python_docx==1.1.0
-Requests==2.31.0
+requests==2.31.0
 selenium==4.18.1
+google-generativeai==0.4.0
